  * Forward port 06_add_compile_time_defaults.
  * Add libevent-dev to build-depends.
  * Update URL to tor in debian/control and debian/copyright.
  * Add a snippet to disable epoll in etc/default/tor, commented out.
  * Add a snippet to set nice level in etc/default/tor.
  * Wait for 60 seconds in init stop.  35 is too little.
  * Don't depend on python anymore - tor-resolve is C now.

 -- Peter Palfrader <weasel@debian.org>  Tue, 22 Mar 2005 22:32:08 +0100

tor (0.0.9.4-1) unstable; urgency=low

  * New upstream version.
  * Set ulimit for file descriptors to 4096 in our init
    script.
  * Use SIGINT to shutdown tor.  That way - if you are a server -
    tor will stop accepting new connections immediately, and
    give existing connections a grace period of 30 seconds in
    which they might complete their task.  If you just run a
    client it should make no difference.

 -- Peter Palfrader <weasel@debian.org>  Fri,  4 Feb 2005 00:20:25 +0100

tor (0.0.9.3-1) unstable; urgency=low

  * New upstream version.
  * Forward port 07_log_to_file_by_default.

 -- Peter Palfrader <weasel@debian.org>  Sun, 23 Jan 2005 16:01:58 +0100

tor (0.0.9.2-1) unstable; urgency=low

  * New upstream version.
  * Update debian/copyright (it's 2005).
  * Add sharedscripts tor logrotate.d/tor.

 -- Peter Palfrader <weasel@debian.org>  Tue,  4 Jan 2005 11:14:03 +0100

tor (0.0.9.1-1) unstable; urgency=low

  * New upstream version.

 -- Peter Palfrader <weasel@debian.org>  Thu, 16 Dec 2004 00:16:47 +0100

tor (0.0.8+0.0.9rc7-1) unstable; urgency=medium

  * New upstream release (candidate).
    For real this time.  Looks like our rc6 orig.tar.gz
    was in fact the rc5 one.
  * forward port patches/07_log_to_file_by_default

 -- Peter Palfrader <weasel@debian.org>  Wed,  8 Dec 2004 15:22:44 +0100

tor (0.0.8+0.0.9rc6-1) unstable; urgency=medium

  * New upstream release (candidate).
    - cleans up more integer underflows that don't look exploitable.