@@ -9,6 +9,8 @@ tor (0.1.0.0-alpha-cvs-1) UNRELEASED; urgency=low
   * Add a snippet to set nice level in etc/default/tor.
   * Wait for 60 seconds in init stop.  35 is too little.
   * Don't depend on python anymore - tor-resolve is C now.
+  * If "with-dmalloc" is in DEB_BUILD_OPTIONS we build against libdmalloc4.
+    Of course the -dev package needs to be installed.
 
  -- Peter Palfrader <weasel@debian.org>  Tue, 22 Mar 2005 22:32:08 +0100
 
